criacao da pagina de login e style guide

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,20 @@
 
 @layer base {
   :root {
+    --gray-100: #fbfff4;
+
+    --green-50: #ebffe2;
+    --green-100: #d2ffc1;
+    --green-200: #a8ff8a;
+    --green-300: #6fff47;
+    --green-400: #3cff11;
+    --green-500: #1af100;
+    --green-600: #0fc200;
+    --green-700: #0b9200;
+    --green-800: #0c7202;
+    --green-900: #0d5f07;
+    --green-950: #013600;
+
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
@@ -30,32 +44,6 @@
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
-  .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
-  }
 }
 
 @layer base {
@@ -65,6 +53,61 @@
 
   body {
     @apply bg-background text-foreground;
-    font-family: "Roboto", sans-serif;
+
+    color: var(--green-950);
+    background: var(--gray-100);
+
+    &::-webkit-scrollbar {
+      width: 6px;
+      height: 6px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: var(--green-950);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: var(--green-800);
+      border-radius: 50px;
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background: #303a5d;
+    }
+  }
+
+  input {
+    outline: none;
+    border: none;
+    box-shadow: none !important;
+  }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .custom-scrollbar {
+    &::-webkit-scrollbar {
+      width: 6px;
+      height: 6px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: var(--green-950);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: var(--green-800);
+      border-radius: 50px;
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background: #303a5d;
+    }
   }
 }
