--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,12 @@
     outline: none;
     border: none;
     box-shadow: none !important;
+    &:-webkit-autofill {
+      background-color: transparent !important; /* Remove o fundo azul */
+      -webkit-box-shadow: 0 0 0px 1000px white inset !important; /* Define a cor do fundo desejada */
+      -webkit-text-fill-color: inherit !important; /* Mantém a cor do texto consistente */
+      transition: background-color 5000s ease-in-out 0s; /* Previne flashes visuais ao preencher */
+    }
   }
 
   .no-scrollbar::-webkit-scrollbar {
