--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,6 @@
 
 @layer base {
   :root {
-    --gray-100: #fbfff4;
-
     --green-50: #ebffe2;
     --green-100: #d2ffc1;
     --green-200: #a8ff8a;
@@ -17,6 +15,15 @@
     --green-800: #0c7202;
     --green-900: #0d5f07;
     --green-950: #013600;
+
+    --gray-100: #fbfff4;
+    --gray-200: #e6e8f2;
+    --gray-300: #d1d6e4;
+    --gray-400: #8d95af;
+    --gray-500: #303f73;
+    --gray-600: #252d4a;
+    --gray-700: #181c2a;
+    --gray-800: #0e1116;
 
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
@@ -104,11 +111,11 @@
     }
 
     &::-webkit-scrollbar-track {
-      background: var(--green-950);
+      background: var(--green-200);
     }
 
     &::-webkit-scrollbar-thumb {
-      background: var(--green-800);
+      background: var(--green-700);
       border-radius: 50px;
     }
 
